some html structure

--- a/index.html
+++ b/index.html
@@ -2,16 +2,104 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>My Project</title>
+	<title>Portfolio</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="public/styles/style.css">
 </head>
 <body>
+    <header id="sidebar">
+        <div class="sidebar-top__logo">
+            <img src="" alt="">
+            <h5>Chris<br>Comper</h5>
+        </div>
+        <div class="sidebar-top__list">
+            <ul class="sidebar-top__listItems">
+                <li>Home</li>
+                <li>Skills</li>
+                <li>Work</li>
+                <li>Contact</li>
+            </ul>
+        </div>
+        <div class="sidebar-bottom__icons">
+            <a href="https://twitter.com/chriscomper">
+                <i className="fa fa-twitter"></i>
+            </a>
+            <a href="https://github.com/ccomper">
+                <i className="fa fa-github"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/chris-comper-07bb6a13b/">
+                <i className="fa fa-linkedin-square"></i>
+            </a>   
+        </div>
+    </header>  
+    <!--page wrap container -->
+    <div class="container">
+      <!--Hero Homepage -->
+        <section id="hero-page">
+            <div class="hero-page__text">
+            <h1>Hello, my name is Chris Comper</h1>    
+            <h5>I'm a Front-End Developer. I live and work in Toronto, Canada.</h5>
+             <div class="hero-page__buttons">
+                 <button href="">HIRE ME</button>
+                 <button href="">VIEW WORKS</button>
+             </div>        
+            </div>
+        </section>
+        <!-- end of hero -->
 
-	<div class="container">
-		<h1>Hello Drew</h1>
-	</div>
+        <!-- skills -->
+        <section id="skills">
+            <div class="skills-page">
+                
+            </div>    
+        </section>
+        <!-- end of skills -->
 
-	<script src="public/scripts/main.js"></script>
-	
+        <!--works page -->
+        <section id="works">
+            <div class="works-page">
+            <div class="works-page__header">
+                <h2>Works</h2>
+            </div>
+                <!-- first work example -->
+                <div class="works-page__example1">
+                    <img src="http://unsplash.it/200/200" alt="" class="works-page__exampleImage">
+                    <div class="works-page__example-information">
+                        <h4>Title of example</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam aliquid, repellendus. Iusto modi illum non deserunt error quis, atque odit repellendus, iste, dolorum dolores tenetur ab sed hic vero. Possimus.</p>    
+                    </div>   
+                </div>
+                <!-- second work example -->
+                <div class="works-page__example2">
+                    <img src="http://unsplash.it/200/200" alt="" class="works-page__exampleImage">
+                    <div class="works-page__example-information">
+                        <h4>Title of example</h4> 
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum vel magnam vero veritatis quibusdam iste optio corporis veniam fugit saepe quia adipisci architecto reprehenderit exercitationem itaque, deleniti dicta accusantium inventore.</p>   
+                    </div> 
+                </div>
+                <!-- third work example -->
+                <div class="works-page__example3">
+                    <img src="http://unsplash.it/200/200" alt="" class="works-page__exampleImage">
+                    <div class="works-page__example-information">
+                        <h4>Title of example</h4> 
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque tenetur maxime, cum dolore? Quasi itaque delectus necessitatibus earum iusto neque suscipit deleniti mollitia eveniet laboriosam vero quam ex, dolore ea!</p>   
+                    </div>     
+                </div>
+            </div>
+        </section>
+    	
+
+
+
+
+
+
+
+
+
+
+
+    </div>
+<script src="public/scripts/main.js"></script>
 </body>
 </html>
