--- a/index.html
+++ b/index.html
@@ -4,53 +4,70 @@
 	<meta charset="UTF-8">
 	<title>Portfolio</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins|Roboto+Slab" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 	<link rel="stylesheet" href="public/styles/style.css">
 </head>
 <body>
-    <header id="sidebar">
-        <div class="sidebar-top__logo">
-            <img src="" alt="">
-            <h5>Chris<br>Comper</h5>
-        </div>
-        <div class="sidebar-top__list">
-            <ul class="sidebar-top__listItems">
-                <li>Home</li>
-                <li>Skills</li>
-                <li>Work</li>
-                <li>Contact</li>
-            </ul>
-        </div>
-        <div class="sidebar-bottom__icons">
-            <a href="https://twitter.com/chriscomper">
-                <i className="fa fa-twitter"></i>
-            </a>
-            <a href="https://github.com/ccomper">
-                <i className="fa fa-github"></i>
-            </a>
-            <a href="https://www.linkedin.com/in/chris-comper-07bb6a13b/">
-                <i className="fa fa-linkedin-square"></i>
-            </a>   
-        </div>
-    </header>  
-    <!--page wrap container -->
-    <div class="container">
-      <!--Hero Homepage -->
+<!--page wrap container -->
+<div class="container">
+        <!-- sidebar -->
+        <header id="sidebar">
+            <div class="sidebar-top__logo">
+                <img src="../../assets/circles.png" alt="small yellow logo circular pattern">
+                <h5>Chris<br>Comper</h5>
+            </div>
+            <div class="sidebar-top__list">
+                <ul class="sidebar-top__listItems">
+                    <li><a data-scroll href="#sidebar">Home</a></li>
+                    <li><a data-scroll href="#skills">Skills</a></li>
+                    <li><a data-scroll href="#works">Work</a></li>
+                    <li><a data-scroll href="#contact">Contact</a></li>
+                </ul>
+            </div>
+            <div class="sidebar-bottom__icons">
+                <a href="https://twitter.com/chriscomper">
+                    <i class="fa fa-twitter"></i>
+                </a>
+                <a href="https://github.com/ccomper">
+                    <i class="fa fa-github"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/chris-comper-07bb6a13b/">
+                    <i class="fa fa-linkedin-square"></i>
+                </a>   
+            </div>
+        </header>   
+        <!--end of sidebar -->
+        <!--Hero Homepage -->
         <section id="hero-page">
             <div class="hero-page__text">
-            <h1>Hello, my name is Chris Comper</h1>    
-            <h5>I'm a Front-End Developer. I live and work in Toronto, Canada.</h5>
-             <div class="hero-page__buttons">
-                 <button href="">HIRE ME</button>
-                 <button href="">VIEW WORKS</button>
-             </div>        
+                <h1>Hello, my name is Chris Comper</h1>    
+                <h5>I'm a Front-End Developer. I live and work in Toronto, Canada.</h5>
+                 <div class="hero-page__buttons">
+                     <button href="#contact">HIRE ME</button>
+                     <button href="#works">VIEW WORKS</button>
+                 </div>        
             </div>
         </section>
         <!-- end of hero -->
-
         <!-- skills -->
         <section id="skills">
             <div class="skills-page">
-                
+                <div class="skills-page__header">
+                    <h2>Tools and Skills</h2>
+                    <img src="assets/divider.png" alt="small circles under the header text">
+                </div>
+                <div class="skills-page__icons">
+                    <i class="devicon-html5-plain-wordmark"></i>
+                    <i class="devicon-css3-plain-wordmark"></i>
+                    <i class="devicon-javascript-plain"></i>
+                    <i class="devicon-sass-original"></i>
+                    <i class="devicon-react-original-wordmark"></i>
+                    <i class="devicon-git-plain-wordmark"></i>
+                    <i class="devicon-jquery-plain-wordmark"></i>
+                    <i class="devicon-gulp-plain"></i>
+                </div>
             </div>    
         </section>
         <!-- end of skills -->
@@ -58,48 +75,78 @@
         <!--works page -->
         <section id="works">
             <div class="works-page">
-            <div class="works-page__header">
-                <h2>Works</h2>
-            </div>
-                <!-- first work example -->
-                <div class="works-page__example1">
-                    <img src="http://unsplash.it/200/200" alt="" class="works-page__exampleImage">
-                    <div class="works-page__example-information">
-                        <h4>Title of example</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam aliquid, repellendus. Iusto modi illum non deserunt error quis, atque odit repellendus, iste, dolorum dolores tenetur ab sed hic vero. Possimus.</p>    
-                    </div>   
+                <div class="works-page__header">
+                    <h2>Works</h2>
+                    <img src="assets/divider.png" alt="small circles under the header text">
                 </div>
-                <!-- second work example -->
-                <div class="works-page__example2">
-                    <img src="http://unsplash.it/200/200" alt="" class="works-page__exampleImage">
-                    <div class="works-page__example-information">
-                        <h4>Title of example</h4> 
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum vel magnam vero veritatis quibusdam iste optio corporis veniam fugit saepe quia adipisci architecto reprehenderit exercitationem itaque, deleniti dicta accusantium inventore.</p>   
-                    </div> 
-                </div>
-                <!-- third work example -->
-                <div class="works-page__example3">
-                    <img src="http://unsplash.it/200/200" alt="" class="works-page__exampleImage">
-                    <div class="works-page__example-information">
-                        <h4>Title of example</h4> 
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque tenetur maxime, cum dolore? Quasi itaque delectus necessitatibus earum iusto neque suscipit deleniti mollitia eveniet laboriosam vero quam ex, dolore ea!</p>   
-                    </div>     
+                <div data-flickity>
+                    <!-- first work example -->
+                    <div class="works-page__example1 main-carousel">
+                        <img src="http://unsplash.it/200/200" alt="" class="works-page__exampleImage">
+                        <div class="works-page__example-information">
+                            <h4>Title of example</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam aliquid, repellendus. Iusto modi illum non deserunt error quis, atque odit repellendus, iste, dolorum dolores tenetur ab sed hic vero. Possimus.</p>    
+                        </div>   
+                    </div>
+                    <!-- second work example -->
+                    <div class="works-page__example2 carousel-cell">
+                        <img src="http://unsplash.it/200/200" alt="" class="works-page__exampleImage">
+                        <div class="works-page__example-information">
+                            <h4>Title of example</h4> 
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum vel magnam vero veritatis quibusdam iste optio corporis veniam fugit saepe quia adipisci architecto reprehenderit exercitationem itaque, deleniti dicta accusantium inventore.</p>   
+                        </div> 
+                    </div>
+                    <!-- third work example -->
+                    <div class="works-page__example3 carousel-cell">
+                        <img src="http://unsplash.it/200/200" alt="" class="works-page__exampleImage">
+                        <div class="works-page__example-information">
+                            <h4>Title of example</h4> 
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque tenetur maxime, cum dolore? Quasi itaque delectus necessitatibus earum iusto neque suscipit deleniti mollitia eveniet laboriosam vero quam ex, dolore ea!</p>   
+                        </div>     
+                    </div>
+                    <!-- fourth work example -->
+                    <div class="works-page__example4 carousel-cell">
+                        <img src="http://unsplash.it/200/200" alt="" class="works-page__exampleImage">
+                        <div class="works-page__example-information">
+                            <h4>Title of example</h4> 
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque tenetur maxime, cum dolore? Quasi itaque delectus necessitatibus earum iusto neque suscipit deleniti mollitia eveniet laboriosam vero quam ex, dolore ea!</p>   
+                        </div>     
+                    </div>
                 </div>
             </div>
         </section>
-    	
-
-
-
-
-
-
-
-
-
-
-
+        <!-- contact page -->
+        <section id="contact">
+            <div class="contact-page__header">    
+                <h2>Contact</h2>
+                <img src="assets/divider.png" alt="small circles under the header text">
+            </div>
+            <div class="contact-page__emailInfo">
+                <h4>christophercomper.dev@gmail.com</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae dicta rem perspiciatis, reiciendis, reprehenderit aut commodi beatae ratione ab illo, optio dolor hic fugiat. Dolor at ducimus in veritatis, quae!</p>
+            </div>
+            <div class="contact-page__form">
+                <h3>Enjoy my work? Hire me!</h3>
+                <form method="POST" action="http://www.focuspocus.io/magic/c07a0b0b8c746da776ef673f447f59c6">
+                    <input type="text" placeholder="name">
+                    <input type="text" placeholder="email address">
+                    <textarea name="textarea" placeholder="Enter message" ></textarea>
+                    <input type="submit">
+                </form>
+            </div>
+        </section>
     </div>
+<script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+<script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+<script src="public/scripts/smooth-scroll.js"></script>
 <script src="public/scripts/main.js"></script>
+<script>
+    smoothScroll.init({
+        speed: 1500
+    });
+</script>
 </body>
 </html>
