--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </div>
                 <div data-flickity>
                     <!-- first work example -->
-                    <div class="works-page__example1 main-carousel">
+                    <div class="works-page__example main-carousel">
                         <img src="http://unsplash.it/200/200" alt="" class="works-page__exampleImage">
                         <div class="works-page__example-information">
                             <h4>Title of example</h4>
@@ -89,7 +89,7 @@
                         </div>   
                     </div>
                     <!-- second work example -->
-                    <div class="works-page__example2 carousel-cell">
+                    <div class="works-page__example carousel-cell">
                         <img src="http://unsplash.it/200/200" alt="" class="works-page__exampleImage">
                         <div class="works-page__example-information">
                             <h4>Title of example</h4> 
@@ -97,7 +97,7 @@
                         </div> 
                     </div>
                     <!-- third work example -->
-                    <div class="works-page__example3 carousel-cell">
+                    <div class="works-page__example carousel-cell">
                         <img src="http://unsplash.it/200/200" alt="" class="works-page__exampleImage">
                         <div class="works-page__example-information">
                             <h4>Title of example</h4> 
@@ -105,7 +105,7 @@
                         </div>     
                     </div>
                     <!-- fourth work example -->
-                    <div class="works-page__example4 carousel-cell">
+                    <div class="works-page__example carousel-cell">
                         <img src="http://unsplash.it/200/200" alt="" class="works-page__exampleImage">
                         <div class="works-page__example-information">
                             <h4>Title of example</h4> 
